--- a/login.html
+++ b/login.html
@@ -95,7 +95,8 @@
                 inputPass === data.password
             ) {
                 alert('Login successful!');
-                window.location.href = 'index.html';
+                window.location.href = 'http://127.0.0.1:8000/';
+                
             } else {
                 alert('Incorrect username/email or password.');
             }
